--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/client.rs"
 [dependencies]
 im = "15.0.0"
 log = "0.4"
+env_logger = "0.8.4"
 config = "0.11"
 clap = "2.34.0"
 tonic = "0.6"
