--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = "2.34.0"
 tonic = "0.6"
 prost = "0.9"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+anyhow = "1.0.56"
 
 [build-dependencies]
 tonic-build = "0.6"
